Bug 166955. Type ahead find causes typing failure in mail compose window after returning from browser. r=bz, sr=dbaron